# ProcessorLatencyTool

./: .gitignore  LICENSE.txt  ProcessorLatencyTool.sln  README.md
.github/workflows/: dotnet-desktop.yml
ProcessorLatencyTool/: App.axaml  App.axaml.cs  NativeMethods.txt  ProcessorLatencyTool.csproj  Program.cs  ViewLocator.cs  app.manifest
ProcessorLatencyTool/Helpers/: ColorHelper.cs  HighPrecisionLatencyTester.cs  StatisticsHelper.cs  SystemInfoHelper.cs
ProcessorLatencyTool/Helpers/LatencyTester/: AtomicBoolean.cs  LatencyTesterBase.cs  LinuxLatencyTester.cs  MacOsLatencyTester.cs  WindowsLatencyTester.cs
ProcessorLatencyTool/Models/: LatencyResult.cs  Statistics.cs
ProcessorLatencyTool/Native/: CMakeLists.txt  arm64_registers.c
ProcessorLatencyTool/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
ProcessorLatencyTool/Views/: MainWindow.axaml  MainWindow.axaml.cs
ProcessorLatencyTool/runtimes/osx/native/: libarm64_registers.dylib
